--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
 
-<h1>Guess My number</h1>
+<h1>Guess My number!</h1>
 <p>Between 1 and 20</p>
 <button class="btn again">Again</button>
 <div class="number"></div>
